--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -28,6 +28,11 @@ ion-title {
         color: #fff !important;
       }
 
+      .upload{
+        background-color: #cbc733;
+        border-color: #cbc733;
+      }
+
       .title{
         font-size: 14pt;
        /* color:#212121 !important;*/
